# nscj

./: .gitignore  CMakeLists.txt  README.md  archive.ps1  build.ps1  example.nsi  vcpkg.json
.github/workflows/: build.yml  test.yml
nsis/: pluginapi.c
src/: http.c  http.h  nscj.c  tree.c  tree.h  util.c  util.h
test/: main.c
